--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8" />
     <link
         rel="stylesheet"
-        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
+        href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css"
     />
 </head>
 <body>
     <div id="map" style="width: 1200px; height: 800px"></div>
 
     <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
+        src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js">
     </script>
 
     <script>
