表示画面のサイズを変更した

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 </head>
 <body>
-    <div id="map" style="width: 1200px; height: 800px"></div>
+    <div id="map" style="width:auto; height:auto"></div>
 
     <script
         src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js">
