--- a/animation4movie/index.html
+++ b/animation4movie/index.html
@@ -2,25 +2,29 @@
     <html lang="ja">
       <head>
         <meta charset="utf-8">
-        <title>D3 Test</title>
+        <title>巡回可視化</title>
         <style type="text/css">
         .ward {
-            fill: #fff;
-            stroke: #aaa;
-            stroke-width: 0.7;
+          fill: rgba(255,255,255,0.3);
+          stroke: #aaa;
+          stroke-width: 1.5;
         }
         /* 市町村地図 */
         #map {
-            background: #eff;
-            padding: 40px;
-            z-index: 10;
-            position: absolute;
+          /* background-image: url("background.png");
+          background-size: cover;
+          background-attachment: fixed;
+          background-position: center center; */
+          background-color: "#639a67";
+          padding: 20px;
+          z-index: 10;
+          position: absolute;
         }
         /* 経路  z-index で地図より上に配置する*/
         #route {
-            padding: 40px;
-            z-index: 20;
-            position: absolute;
+          padding: 20px;
+          z-index: 20;
+          position: absolute;
         }
         </style>
       </head>
@@ -36,7 +40,7 @@
         var width = 960,
         height = 640,
         padding = 40,
-        scale = 16000;
+        scale = 14500;
 
         //地図を描く先のsvg要素を準備
         var map = d3.select("#map")
@@ -52,7 +56,7 @@
 
         //緯度経度→画面座標の投影方法を指定。
         var projection = d3.geoMercator()
-            .center([ 137.97, 36.11 ])
+            .center([ 138.14, 36.12 ])
             .translate([width/2, height/2])
             .scale(scale);
 
@@ -97,7 +101,7 @@
 
               // 長野市はスタート地点なので最初から色を塗っておく
               var clasName = ".ward-20201";
-              d3.selectAll(clasName).style("fill", "#000");
+              d3.selectAll(clasName).style("fill", "#e5e4cc");
         }
 
         // 経路の表示と移動アニメーション、巡回した市町村名の塗りつぶし
@@ -118,8 +122,8 @@
             .attr("class","line")
             .attr("d", path)
             .attr("fill", "none")
-            .attr("stroke", "red")
-        		.attr("stroke-width", 1.3);
+            .attr("stroke", "#de7119")
+        		.attr("stroke-width", 3.8);
 
           // 各セレクション（各役場間の経路）を取り出す
           var pathNodes = targetPath.nodes();
@@ -127,8 +131,8 @@
 
             //アニメーションcircle追加
             var circle = route.append("circle")
-              .attr("r", 4)
-              .attr("fill", "black")
+              .attr("r", 7)
+              .attr("fill", "#ffa34d")
               .attr("transform",
                 function () {
                   var p = pathNode.getPointAtLength(0)
@@ -137,12 +141,15 @@
               );
 
             // 有効時間
-            const time = 1000;
+            // const time = 2000;
+            // const viewTime = 4000;
+            const time = 500;
+            const viewTime = 0;
             // console.log(arrangedWardsJson[index].N03_007);
 
             //アニメーション実行
             circle.transition()
-              .delay(time*index) // 開始時間 (index を掛けて順番に移動するようにする)
+              .delay(viewTime*index + time*index) // 開始時間 (index を掛けて順番に移動するようにする)
               .duration(time)    // 有効時間
               .ease(d3.easeCubic)
               .attrTween("transform", function (d, i) {
@@ -158,7 +165,20 @@
                 // 色を変える
                 // 市町村名コード？の　N03_007 で指定する
                 var clasName = ".ward-" + arrangedWardsJson[index].N03_007;
-                d3.selectAll(clasName).style("fill", "#000");
+                var color = "#000";
+                if (1 == arrangedWardsJson[index].day) {
+                  color = "#e5e4cc";
+                }
+                else if (2 == arrangedWardsJson[index].day) {
+                  color = "#bac7a7";
+                }
+                else if (3 == arrangedWardsJson[index].day) {
+                  color = "#889e81";
+                }
+                else if (4 == arrangedWardsJson[index].day) {
+                  color = "#698474";
+                }
+                d3.selectAll(clasName).style("fill", color);
               })
               .on("end", function() { // トランジション終了後
                 // アニメーションを終えたcircleを削除する
